SDM-2829: Upgrade to Spring Boot 3 + other library upgrades (#183)